apps/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx-demo
    namespace: default
spec:
    replicas: 4
    selector:
        matchLabels:
            app: nginx-demo
    template:
         metadata:
            labels:
                 app: nginx-demo
         spec:
            containers:
            - name: nginx
              image: nginx:latest
              ports:
              - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
    name: nginx-demo
    namespace: default
spec:
    type: NodePort
    selector:
        app: nginx-demo
    ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
