apps/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: nginx-demo
    namespace: default
spec:
    rules:
    - host: nginx.homelab.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
                name: nginx-demo
                port:
                    number: 80
